--- a/package.json
+++ b/package.json
@@ -3,24 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.22",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
+    "cors-anywhere": "^0.4.4",
+    "cypress": "^7.1.0",
     "react": "^17.0.2",
+    "react-cool-onclickoutside": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^2.3.2",
+    "react-modal": "^3.13.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.3",
+    "react-responsive-modal": "^6.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "use-places-autocomplete": "^1.9.1",
+    "web-vitals": "^1.1.1",
+    "worldweatheronline-api": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress":"cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
+    "@types/react-places-autocomplete": "^7.2.6"
   }
 }
